NetBSD Problem Report #41124

From www@NetBSD.org  Fri Apr  3 07:46:48 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id A15EB63B946
	for <gnats-bugs@gnats.netbsd.org>; Fri,  3 Apr 2009 07:46:48 +0000 (UTC)
Message-Id: <20090403074642.4EB6F63B8C8@www.NetBSD.org>
Date: Fri,  3 Apr 2009 07:46:42 +0000 (UTC)
From: yuichi.sakurai@rsi.ricoh.co.jp 
Reply-To: yuichi.sakurai@rsi.ricoh.co.jp 
To: gnats-bugs@NetBSD.org
Subject: Anritsu corporation seed router can't parse AARP-reply through AppleTalk(Netatalk) 
X-Send-Pr-Version: www-1.0

>Number:         41124
>Category:       kern
>Synopsis:       Anritsu corporation seed router can't parse AARP-reply through AppleTalk(Netatalk)
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 03 07:50:00 +0000 2009
>Closed-Date:    Sat Sep 12 21:15:00 +0000 2009
>Last-Modified:  Sat Sep 12 21:15:00 +0000 2009
>Originator:     Yuichi Sakurai
>Release:        2.0.2
>Organization:
Ricoh Software Inc.
>Environment:
>Description:
AARP-reply about at_aarpinput() in /src/sys/netatalk/aarp.c

Anritsu corporation seed router(Anritsu MF5024) is checking 802.3 Ethernet Length field.
But,When AARP-request is sent from the router
Netatalk(NetBSD) AARP-reply is not set Length field. This is different from the specifications.
As a result because the router can't be checked, AARP can't be solved.

By the way, AARP-request and AARP-probe set Length field.

>How-To-Repeat:
see above.
>Fix:
About at_aarpinput() in /src/sys/netatalk/aarp.c, we must modify as follows.

	/* XXX */
	eh = (struct ether_header *) sa.sa_data;
	memcpy( eh->ether_dhost, ea->aarp_tha, sizeof(eh->ether_dhost));

+	m->m_len = sizeof(*ea);
+	m->m_pkthdr.len = sizeof(*ea);

	if (aa->aa_flags & AFA_PHASE2) {
		M_PREPEND(m, sizeof(struct llc), M_DONTWAIT);
		if (m == NULL)
			return;

Length field set 36(sizeof(*ea)) is true.

>Release-Note:

>Audit-Trail:
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41124 CVS commit: src/sys/netatalk
Date: Sat, 12 Sep 2009 20:43:18 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 20:43:18 UTC 2009

 Modified Files:
 	src/sys/netatalk: aarp.c

 Log Message:
 Make sure to set length in AARP-response packets. PR kern/41124


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/netatalk/aarp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 13 Sep 2009 06:15:00 +0900
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.