Make sure to set length in AARP-response packets. PR kern/41124